# packages/protocol/openapi/v1.json
@@ -1776,6 +1776,13 @@
           "title": {
             "type": "string"
           },
+          "permissionMode": {
+            "type": "string",
+            "enum": [
+              "full_access",
+              "policy"
+            ]
+          },
           "createdAt": {
             "type": "string",
             "pattern": "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?(Z|[+-]\\d{2}:\\d{2})$"
@@ -1789,6 +1796,7 @@
           "id",
           "agentId",
           "title",
+          "permissionMode",
           "createdAt",
           "updatedAt"
         ],
@@ -1818,10 +1826,19 @@
           },
           "title": {
             "type": "string"
+          },
+          "permissionMode": {
+            "default": "full_access",
+            "type": "string",
+            "enum": [
+              "full_access",
+              "policy"
+            ]
           }
         },
         "required": [
-          "agentId"
+          "agentId",
+          "permissionMode"
         ],
         "additionalProperties": false
       },
